Fix icon display on dark mode

--- a/src/styles/PageContent.less
+++ b/src/styles/PageContent.less
@@ -7,6 +7,7 @@
     margin-right: 10em;
     color: rgba(255, 255, 255, 0.55);
   }
+
   .page-content {
     display: flex;
     flex-direction: column;
@@ -17,3 +18,5 @@
     line-height: 28px;
   }
 }
+
+@media (ming-width: 768px) {}
