--- a/src/styles/Sidebar.less
+++ b/src/styles/Sidebar.less
@@ -1,6 +1,6 @@
 @keyframes activeUnderlineGrow {
   0% {
-    left: -50%;
+    left: -100%;
   }
 
   100% {
